--- a/dls/templates/login.html
+++ b/dls/templates/login.html
@@ -8,7 +8,7 @@
         <h2 class="form-signin-heading">登录系统 1/2</h2>
         <div class="form-group">
             <label class="sr-only" for="usercode">请输入营业工号</label>
-            <input type="text" class="form-control" id="usercode" name="usercode" placeholder="请输入门户账户">
+            <input type="text" class="form-control" id="usercode" name="usercode" placeholder="请输入营业工号">
         </div>
         <button type="submit" class="btn btn-success">获取验证码</button>
     </form>
