--- a/dls/templates/base.html
+++ b/dls/templates/base.html
@@ -43,10 +43,17 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li {%if request.endpoint=='showsnlist' %}class="active"{%endif%}><a href="{{ url_for('showsnlist') }}">发展明细</a></li>
-
+                <li
+                {%if request.endpoint=='newslist' %}class="active"{%endif%}><a
+                    href="{{ url_for('newslist') }}">政策公告</a></li>
 
                 {% if g.user.is_authenticated() %}
+                <li
+                {%if request.endpoint=='showsnlist' %}class="active"{%endif%}><a
+                    href="{{ url_for('showsnlist') }}">发展明细</a></li>
+
+
+
                 <li><a href="{{ url_for('logout') }}">注销登陆</a></li>
                 {% endif %}
             </ul>
