--- a/mbp/templates/base.html
+++ b/mbp/templates/base.html
@@ -57,6 +57,9 @@
 {% block content %}{% endblock %}
 </div>
 
-
+<script type="text/javascript">
+    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F386c54d0b8bdd21f60ae35398536ed58' type='text/javascript'%3E%3C/script%3E"));
+</script>
 </body>
 </html>
