--- a/dls/templates/base.html
+++ b/dls/templates/base.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>{{ title }} - 基于微信的代理商信息系统</title>
+    <title>{{ title }} - 代理商信息系统</title>
     {% else %}
-    <title>基于微信的代理商信息系统</title>
+    <title>代理商信息系统</title>
     {% endif %}
 
 
@@ -28,6 +28,12 @@
 </head>
 <body>
 
+<!--[if lte IE 7]>
+<div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    请使用高版本浏览器访问本系统.如Chrome浏览器,遨游浏览器,Opera浏览器等
+</div>
+<![endif]-->
 <div class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
@@ -66,5 +72,7 @@
 {% block content %}{% endblock %}
 </div>
 
+
+{%include 'footer.html' %}
 </body>
 </html>
