--- a/dls/templates/showsnlist.html
+++ b/dls/templates/showsnlist.html
@@ -33,8 +33,9 @@
             </div>
             <input type="hidden" id="enddate" name="enddate" value="{{request.args.get('e')}}"/><br/>
         </div>
-
+        <div class="form-group">
         <button type="submit" class="btn btn-success">查询</button>
+            </div>
     </form>
 </div>
         <br>
