--- a/mbp/templates/base.html
+++ b/mbp/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn" data-lang="zh-cn" data-template="simple" class="lang-zh-cn">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='pace/pace.css') }}">
+    <script src="{{ url_for('static', filename='pace/pace.min.js') }}"></script>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
