--- a/autodb/templates/base.html
+++ b/autodb/templates/base.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="zh-cn" data-lang="zh-cn" data-template="simple" class="lang-zh-cn">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='pace/pace.css') }}">
+    <script src="{{ url_for('static', filename='pace/pace.min.js') }}"></script>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>{{ title }} - 查询系统</title>
+    <title>{{ title }} - 代理商信息系统</title>
     {% else %}
-    <title>查询系统</title>
+    <title>代理商信息系统</title>
     {% endif %}
-    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-    <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+
+
+    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='miniui/boot.js') }}" type="text/javascript"></script>
+
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
-    <!--[if lte IE 6]>
-    <link rel="stylesheet" href="/static/css/ie6.css"/>
-    <![endif]-->
+    <!--&lt;!&ndash;[if lte IE 6]>-->
+    <!--<link rel="stylesheet" href="/static/css/ie6.css"/>-->
+    <!--<![endif]&ndash;&gt;-->
+
 
 
 </head>
 <body>
 
+<!--[if lte IE 7]>
+<div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    请使用高版本浏览器访问本系统.如Chrome浏览器,遨游浏览器,Opera浏览器等
+</div>
+<![endif]-->
 <div class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
@@ -36,14 +50,17 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li
+                {%if request.endpoint=='sqllist' %}class="active"{%endif%}><a
+                    href="{{ url_for('sqllist') }}">任务列表</a></li>
 
-                <li>
-                <a href="{{ url_for('sqllist') }}">任务列表</a></li>
                 {% if g.user.is_authenticated() %}
+
+
+
+
                 <li><a href="{{ url_for('logout') }}">注销登陆</a></li>
                 {% endif %}
-
-
             </ul>
         </div>
         <!--/.nav-collapse -->
@@ -55,5 +72,6 @@
 </div>
 
 
+{%include 'footer.html' %}
 </body>
 </html>
