--- a/autodb/templates/sqllist.html
+++ b/autodb/templates/sqllist.html
@@ -3,15 +3,32 @@
 {% from "_paginathion.html" import pagination_html %}
 {% block content %}
 
-<div id="datagrid1" class="mini-datagrid" style="width:800px;height:280px;" allowResize="true"
-     url="{{url_for('sqllistdata',a=1)}}" idField="id" multiSelect="true"
+<div id="datagrid1" class="mini-datagrid" allowResize="true"     url="{{url_for('sqllistdata',a=23)}}" idField="guid"     allowAlternating="true" selectOnLoad="true"    onselectionchanged="onSelectionChanged"
         >
     <div property="columns">
         <div type="indexcolumn"></div>
         <div type="checkcolumn"></div>
-        <div field="loginname" width="120" headerAlign="center" allowSort="true">员工帐号</div>
-        <div field="name" width="120" headerAlign="center" allowSort="true">姓名</div>
-
+        <div field="title"  headerAlign="center">标题</div>
+        <div field="sqlContent" headerAlign="center">sql</div>
+        <div field="nextexec" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">下次执行</div>
+        <div field="lastexec" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">上次执行</div>
+        <div field="frequency" headerAlign="center">频率</div>
+    </div>
+</div>
+<br>
+<div id="panel1" class="mini-panel" title="日志信息" iconCls="icon-add" style="width:100%"
+     showToolbar="false" showCollapseButton="true" showFooter="true" allowResize="true" collapseOnTitleClick="true"
+>
+    <div id="dataresult" class="mini-datagrid" allowResize="true"
+         url="{{url_for('sqlresult',a=23)}}" idField="guid" multiSelect="true" >
+        <div property="columns">
+            <div type="indexcolumn"></div>
+            <div type="checkcolumn"></div>
+            <div field="sqlContent" headerAlign="center">语句</div>
+            <div field="success" headerAlign="center">执行结果</div>
+            <div field="message" headerAlign="center">消息</div>
+            <div field="opdate" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">执行时间</div>
+        </div>
     </div>
 </div>
 
@@ -21,51 +38,16 @@
 
     var grid = mini.get("datagrid1");
     grid.load();
-    grid.sortBy("createtime", "desc");
+    var dataresult=mini.get("dataresult")
 
+    function onSelectionChanged(e) {
+
+        var grid = e.sender;
+        var record = grid.getSelected();
+        if (record) {
+            dataresult.load({ sguid: record.guid });
+        }
+    }
 </script>
-<!----显示表格---->
 
-<div class="table-responsive">
-    <table class="table table-hover table-bordered table-striped">
-        <thead>
-        <tr>
-            <td>guid</td>
-            <td>标题</td>
-            <td>sql语句</td>
-            <td>参数</td>
-            <td>频率</td>
-            <td>状态</td>
-            <td>上次执行</td>
-            <td>下次执行</td>
-            <td>用户</td>
-            <td>创建时间</td>
-        </tr>
-        </thead>
-
-        {% if pagination %}
-        {% for item in pagination.items %}
-        <tr>
-            <td>{{item.guid}}</td>
-            <td>{{item.title}}</td>
-            <td>{{item.sqlContent}}</td>
-            <td>{{item.paras}}</td>
-            <td>{{item.frequency}}</td>
-            <td>{{item.state}}</td>
-            <td>{{item.lastexec}}</td>
-            <td>{{item.nextexec}}</td>
-            <td>{{item.user_code}}</td>
-            <td>{{item.opdate}}</td>
-            </td>
-        </tr>
-        {% endfor %}
-        {% else %}
-        <tr>
-            <td colspan="{{ fields|count }}">NO DATA</td>
-        </tr>
-        {% endif %}
-    </table>
-</div>
-<!-- 调用分页模板 -->
-{{ pagination_html(pagination, request.endpoint, request.query_string) }}
 {% endblock %}
