--- a/autodb/templates/base.html
+++ b/autodb/templates/base.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>{{ title }} - 代理商信息系统</title>
+    <title>{{ title }} - 数据库任务系统</title>
     {% else %}
-    <title>代理商信息系统</title>
+    <title>数据库任务系统</title>
     {% endif %}
 
 
