--- a/autodb/templates/404.html
+++ b/autodb/templates/404.html
@@ -2,6 +2,4 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>404 您想要的信息不存在</h1>
-<p><a href="{{url_for('index')}}">Back</a></p>
-{% endblock %}
+<h1>404 您想要的信息不存在</h1>{% endblock %}
