更改文件结构,更适合扩展,加入blueprint

--- a/autodb/templates/login.html
+++ b/autodb/templates/login.html
@@ -42,7 +42,7 @@
         var data = form.getData();
         var json = mini.encode(data);
         $.ajax({
-            url: "{{url_for('loginchk')}}",
+            url: "{{url_for('user.loginchk')}}",
             type: "post",
             data: { submitData: json },
             success: function (text) {
