--- a/autodb/templates/index.html
+++ b/autodb/templates/index.html
@@ -4,18 +4,17 @@
 {% block content %}
 <div class="jumbotron">
     <div class="container">
-        {%if uinfo%}
+        {%if g%}
 
         <div class="row">
 
-            欢迎您:{{uinfo.chnl_name}}<br>
-            当前工号:{{uinfo.staff_id}}
+            欢迎您{{g.user.get_id()}}
          </div>
         {%else%}
         <div class="row">
 
            您尚未登录.<a
-                href="{{ url_for('login') }}">点此登录</a>
+                href="{{ url_for('user.login') }}">点此登录</a>
         </div>
         {%endif%}
 
