尝试修改为pony orm 分页问题未解决.

--- a/autodb/templates/sqllist.html
+++ b/autodb/templates/sqllist.html
@@ -21,7 +21,7 @@
         <div property="columns">
             <div type="indexcolumn"></div>
             <div type="checkcolumn"></div>
-            <div field="sqlContent" headerAlign="center">语句</div>
+            <div field="sqlcontent" headerAlign="center">语句</div>
             <div header="执行信息" headerAlign="center">
                 <div property="columns">
                     <div field="success" renderer="onGenderRenderer" headerAlign="center">执行结果</div>
