代码结构优化

--- a/autodb/templates/sqllist.html
+++ b/autodb/templates/sqllist.html
@@ -21,6 +21,7 @@
         <div property="columns">
             <div type="indexcolumn"></div>
             <div type="checkcolumn"></div>
+            <div field="guid" headerAlign="center">guid</div>
             <div field="sqlcontent" headerAlign="center">语句</div>
             <div header="执行信息" headerAlign="center">
                 <div property="columns">
