--- a/autodb/templates/index.html
+++ b/autodb/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="jumbotron">
     <div class="container">
-        {%if g%}
+        {%if g.user%}
 
         <div class="row">
 
