代码结构优化

--- a/autodb/templates/sqllist.html
+++ b/autodb/templates/sqllist.html
@@ -8,7 +8,7 @@
         <div type="indexcolumn"></div>
         <div type="checkcolumn"></div>
         <div field="title"  headerAlign="center">标题</div>
-        <div field="sqlContent" headerAlign="center">sql</div>
+        <div field="sqlcontent" headerAlign="center">sql</div>
         <div field="nextexec" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">下次执行</div>
         <div field="lastexec" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">上次执行</div>
         <div field="frequency" headerAlign="center">频率</div>
