--- a/autodb/templates/base.html
+++ b/autodb/templates/base.html
@@ -13,6 +13,7 @@
 
 
     <script src="{{ url_for('static', filename='miniui/boot.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='miniui/core.js') }}" type="text/javascript"></script>
 
 
 </head>
