--- a/autodb/templates/sqllist.html
+++ b/autodb/templates/sqllist.html
@@ -32,9 +32,11 @@
         <div field="title"  headerAlign="center">标题
             <input property="editor" class="mini-textbox" style="width:100%;"/>
         </div>
-        <div field="sqlcontent" headerAlign="center">sql</div>
+        <div field="sqlcontent" headerAlign="center">sql
+        <input property="editor" class="mini-textarea" style="width:100%;height:100px;" minWidth="200" minHeight="100">
+        </div>
         <div field="nextexec" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">下次执行
-            <input property="editor"  class="mini-datepicker" showTime="true" style="width:100%;"/>
+            <input property="editor"  class="mini-datepicker" data-date-format="yyyy-dd-mm HH:MM:ss" showTime="true" style="width:100%;"/>
         </div>
         <div field="lastexec" dateFormat="yyyy-MM-dd HH:mm:ss" headerAlign="center">上次执行</div>
         <div field="frequency" headerAlign="center">频率</div>
