--- a/autodb/templates/index.html
+++ b/autodb/templates/index.html
@@ -43,10 +43,10 @@
 
 
         <div style="position:absolute;right:12px;bottom:10px;font-size:12px;line-height:25px;font-weight:normal;">
-            <span style="color:Red;font-family:Tahoma">（推荐Blue）</span>选择皮肤：
+            选择皮肤：
             <select id="selectSkin" onchange="onSkinChange(this.value)" style="width:100px;">
-                <option value="">Default</option>
-                <option value="blue">Blue</option>
+
+                <option value="blue" default>Blue</option>
                 <option value="gray">Gray</option>
                 <option value="olive2003">Olive2003</option>
                 <option value="blue2003">Blue2003</option>
